--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,7 +5,10 @@ $police-titre:'Shrikhand', cursive;
 $police-texte:'Roboto', sans-serif;
 $nblettre:8;
 $anim-duration: 1500ms;
+$anim-durationbis:2000ms;
+$nbli:3;
 $anim-delay: $anim-duration / $nblettre;
+$anim-delaybis: $anim-durationbis / $nbli;
 $color-background:lighten($color: black, $amount: 94%);
 $shadow:2px 2px 2px lighten($color: black, $amount: 70%), -2px -2px 2px lighten($color: black, $amount: 70%);
 $apparition1: carte-anim 600ms 200ms ease-out both;
