--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,42 +6,50 @@
 @import "./utils/functions";
 @import "./base/base";
 @import "./utils/keyframes";
-
-.load {
+.container {
 	width: 100%;
 	height: 100%;
+	position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	align-content: center;
 	z-index: 5;
+	background: lighten($color: $color-tertiary, $amount: 20%);
+	animation: invisible 0s 3000ms forwards;
+}
+.load {
+	width: 100%;
+	height: 30%;
+	position: absolute;
 	font-family: $police-titre;
 	display: flex;
     justify-content: center;
     align-items: center;
 	align-content: center;
-    animation: invisible 0s 3000ms forwards;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: white;
+	animation: loading-spinner 1500ms linear ;
+    
     &__lettre {
 		align-content: center;
 		justify-content: center;
 		align-items: center;
 		display: flex;
         height: 100%;
-		animation: lettres 1000ms ease-in-out forwards infinite alternate ,
+		animation: lettres 1000ms ease-in-out forwards ,
 		degrade 1500ms ease-in-out forwards infinite alternate,
-		 invisible $anim-duration backwards;
+		 invisible $anim-duration both,
+		 loading-movement 1000ms ease-in-out forwards infinite alternate;
 		opacity: 0;
 		@for $i from 1 through $nblettre {
             &--#{$i} {
                 animation-delay: $anim-delay * $i;
              }
         }
-		&__spinner{
-			position: absolute;
-		}
-    }
+	}
 }
 .localisation {
 	display: flex;
@@ -165,7 +173,13 @@
 		margin-inline-end: unset;
 		padding-inline-start: unset;
 		width: 100%;
-		li {
+		&:hover .ordre {
+			animation-play-state: running;
+			& i {
+				animation-play-state: running;
+			}
+	}
+		& .ordre {
 			width: 82%;
 			margin: 30px 5% 30px 5%;
 			padding: 20px 4% 20px 4%;
@@ -173,20 +187,22 @@
 			border-radius: 30px;
 			font-size: 1.2em;
 			background-color: lighten($color: black, $amount: 95%);
-			transition: all 300ms ease-in;
-			transform: scale(1);
-			&:hover{
-				background: lighten($color: $color-primary, $amount: 30%);
-				transform: scale(1.05);
-				opacity: 0.8;
-				& i {
-					color: $color-primary;
-				}
+			animation: fonction-anim $anim-durationbis linear backwards infinite alternate paused;
+			@for $i from 1 through $nbli {
+				&--#{$i} {
+					animation-delay: $anim-delaybis * $i;
+				 }
 			}
 		}
 		i {
 			font-size: 1.3em;
 			color: lighten($color: black, $amount: 40%);
+			animation: fonction-i $anim-durationbis linear backwards infinite alternate paused;
+			@for $i from 1 through $nbli {
+				&--#{$i} {
+					animation-delay: $anim-delaybis * $i;
+				 }
+			}
 		}
 		p {
 			display: inline;
