--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -64,11 +64,50 @@
         background: linear-gradient( 1deg, $color-secondary ,$color-tertiary, $color-primary);
     } 
 }
-@keyframes shadowanim {
+@keyframes loading-spinner {
     0% {
-        text-shadow: 5px 5px lighten($color: black, $amount: 30%);
+      transform: rotate(0deg);
     }
     100% {
-        text-shadow: 5px 50px lighten($color: black, $amount: 30%);
+      transform: rotate(360deg);
     }
-}
+  }
+  @keyframes loading-grow {
+      0% {
+          transform: scale(0)
+      }
+      100% {
+          transform: scale(2);
+      }
+  }
+  @keyframes loading-movement {
+      0% {
+          transform: translate(-50%, -50%)
+      }
+      100% {
+          transform: translate(50%, 50%);
+      }
+  }
+  @keyframes fonction-anim {
+      0% {
+        background-color: lighten($color: black, $amount: 95%);
+        transform: scale(1);
+        opacity: 1;
+        
+      }
+      100% {
+        background-color: lighten($color: $color-primary, $amount: 30%);
+        transform: scale(1.05);
+        opacity: 0.8;
+        
+      }
+  }
+  @keyframes fonction-i {
+      0% {
+            color: lighten($color: black, $amount: 40%); ;
+      }
+      100% {
+            color: $color-primary;
+      }
+  }
+  
