--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,12 @@ body html, body body, body p, body ol, body ul, body li, body dl, body dt, body 
   padding: 0;
 }
 
+@media (min-width: 799px) {
+  main {
+    background-color: #f0f0f0;
+  }
+}
+
 .dimension {
   display: flex;
   flex-direction: column;
@@ -125,6 +131,14 @@ h3 {
   }
 }
 @keyframes lettres {
+  0% {
+    font-size: 0em;
+  }
+  100% {
+    font-size: 3em;
+  }
+}
+@keyframes lettrespc {
   0% {
     font-size: 0em;
   }
@@ -272,6 +286,63 @@ h3 {
 .load__lettre--8 {
   animation-delay: 1500ms;
 }
+@media (min-width: 799px) {
+  .load__lettre {
+    animation: lettrespc 1000ms ease-in-out forwards, degrade 1500ms ease-in-out forwards infinite alternate, invisible 1500ms both, loading-movement 1000ms ease-in-out forwards infinite alternate;
+  }
+  .load__lettre--1 {
+    animation-delay: 187.5ms;
+  }
+  .load__lettre--2 {
+    animation-delay: 375ms;
+  }
+  .load__lettre--3 {
+    animation-delay: 562.5ms;
+  }
+  .load__lettre--4 {
+    animation-delay: 750ms;
+  }
+  .load__lettre--5 {
+    animation-delay: 937.5ms;
+  }
+  .load__lettre--6 {
+    animation-delay: 1125ms;
+  }
+  .load__lettre--7 {
+    animation-delay: 1312.5ms;
+  }
+  .load__lettre--8 {
+    animation-delay: 1500ms;
+  }
+}
+
+.grid {
+  grid-template-columns: 1fr;
+  display: grid;
+}
+@media (min-width: 799px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.gridpage {
+  grid-template-columns: 1fr;
+  display: grid;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .gridpage {
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: #f0f0f0;
+  }
+}
+@media (min-width: 799px) and (max-width: 1024px) {
+  .gridpage {
+    background-color: #f0f0f0;
+    width: 70%;
+  }
+}
 
 .localisation {
   display: flex;
@@ -295,6 +366,14 @@ h3 {
 }
 .restaurant__nav {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+}
+@media (min-width: 799px) {
+  .restaurant__nav {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 .restaurant__article {
   display: flex;
@@ -447,10 +526,28 @@ h3 {
   width: 100%;
 }
 .fonctionnement ol:hover .ordre {
-  animation-play-state: running;
+  animation: fonction-anim 1000ms linear backwards;
+}
+.fonctionnement ol:hover .ordre--1 {
+  animation-delay: 333.3333333333ms;
+}
+.fonctionnement ol:hover .ordre--2 {
+  animation-delay: 666.6666666667ms;
+}
+.fonctionnement ol:hover .ordre--3 {
+  animation-delay: 1000ms;
 }
 .fonctionnement ol:hover .ordre i {
-  animation-play-state: running;
+  animation: fonction-i 1000ms linear backwards;
+}
+.fonctionnement ol:hover .ordre i--1 {
+  animation-delay: 333.3333333333ms;
+}
+.fonctionnement ol:hover .ordre i--2 {
+  animation-delay: 666.6666666667ms;
+}
+.fonctionnement ol:hover .ordre i--3 {
+  animation-delay: 1000ms;
 }
 .fonctionnement ol .ordre {
   width: 82%;
@@ -460,30 +557,10 @@ h3 {
   border-radius: 30px;
   font-size: 1.2em;
   background-color: #f2f2f2;
-  animation: fonction-anim 2000ms linear backwards infinite alternate paused;
-}
-.fonctionnement ol .ordre--1 {
-  animation-delay: 666.6666666667ms;
-}
-.fonctionnement ol .ordre--2 {
-  animation-delay: 1333.3333333333ms;
-}
-.fonctionnement ol .ordre--3 {
-  animation-delay: 2000ms;
 }
 .fonctionnement ol i {
   font-size: 1.3em;
   color: #666666;
-  animation: fonction-i 2000ms linear backwards infinite alternate paused;
-}
-.fonctionnement ol i--1 {
-  animation-delay: 666.6666666667ms;
-}
-.fonctionnement ol i--2 {
-  animation-delay: 1333.3333333333ms;
-}
-.fonctionnement ol i--3 {
-  animation-delay: 2000ms;
 }
 .fonctionnement ol p {
   display: inline;
@@ -526,6 +603,11 @@ h3 {
   padding-top: 1rem;
   background-color: #f0f0f0;
   width: 100%;
+}
+@media (min-width: 799px) and (max-width: 1024px) {
+  .titre {
+    width: 70%;
+  }
 }
 .titre .coeur {
   width: 35px;
@@ -573,10 +655,6 @@ h3 {
 
 #menugrand {
   height: 375px;
-}
-
-#menubouton {
-  height: 425px;
 }
 
 .menu {
@@ -679,14 +757,16 @@ h3 {
 .menu__prix p {
   margin-right: 10px;
 }
-.menu .commander {
+
+.commander {
   display: flex;
   width: 100%;
   height: 75px;
   justify-content: center;
   padding-top: 50px;
+  background-color: #f0f0f0;
 }
-.menu .commander .button {
+.commander .button {
   border-radius: 30px;
   width: 50%;
   padding: 17px;
@@ -704,7 +784,7 @@ h3 {
   box-shadow: 5px 5px 10px #cccccc;
   opacity: 1;
 }
-.menu .commander .button:hover {
+.commander .button:hover {
   background: linear-gradient(to bottom right, #9356DC, #FF79DA);
   box-shadow: 2px 2px 2px #b3b3b3, -2px -2px 2px #b3b3b3;
   opacity: 0.8;
